<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pokemon_light_gray"
    tools:context=".ui.activity.MainActivity">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/pokemon_background"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/pokemon_primary"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_marginEnd="10dp" />

        <ImageView
            android:id="@+id/ivIcon"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:contentDescription="@string/app_icon"
            android:src="@drawable/ic_pokeball" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/pokemon_background"
        android:paddingStart="16dp"
        android:paddingEnd="20dp"
        android:paddingBottom="18dp"
        app:layout_constraintTop_toBottomOf="@id/header">

        <EditText
            android:id="@+id/tvSearch"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:background="@drawable/search_bar_background"
            android:gravity="center_vertical"
            android:paddingStart="30dp"
            android:hint="@string/search_pokemon"
            android:textColor="@color/pokemon_on_background"
            android:textColorHint="@color/pokemon_on_surface"
            android:maxLines="1"
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/search_icon"
            android:src="@drawable/ic_search"
            app:layout_constraintBottom_toBottomOf="@id/tvSearch"
            app:layout_constraintLeft_toLeftOf="@id/tvSearch"
            app:layout_constraintTop_toTopOf="@id/tvSearch" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/nav_host_fragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:defaultNavHost="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBar"
        app:navGraph="@navigation/nav_graph" />
</androidx.constraintlayout.widget.ConstraintLayout>